fix grammar and dark mode

--- a/src/components/Job/styles.module.css
+++ b/src/components/Job/styles.module.css
@@ -21,3 +21,8 @@
   justify-content: start;
   text-align: left;
 }
+
+.date {
+  font-size: small;
+  font-weight: 400;
+}
