--- a/src/components/Skill/styles.module.css
+++ b/src/components/Skill/styles.module.css
@@ -8,6 +8,8 @@
   align-items: center;
   text-align: center;
   padding: 4rem 0;
+  position: relative;
+  overflow: hidden;
 }
 
 .skillIcon {
@@ -18,6 +20,7 @@
 
 .skillContainer {
   background-color: white;
+  color: black;
   border-radius: 20px;
   width: 90%;
   padding: 2rem 2rem;
@@ -65,5 +68,4 @@ li.skillColumn {
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   border: 1px solid #c4cad1;
-
-  }
+}
